fixed spacing on navbar icon, added link to home on navbar icon/logo, made hero image cover full width of page in mobile view (home page)

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -63,7 +63,10 @@
         margin: 0;
     }
     .heroImageMediaQ {
-        height: 225px;
-        width: 325px;
+        border-radius: 0;
+        width: 120%;
+        margin-left: -1.875rem;
+        margin-right: -1.875rem;
+        margin-top: 0;
     }
 }
