--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -84,7 +84,7 @@ a:link {
 .navbarHamburgerLogo {
     height: 65px;
     align-self: center;
-    padding-top: 5px;
+    padding-top: 10px;
     padding-left: 1rem;
 }
 
